# slack-mcp-server-databricks

./: .gitignore  CONVERSION_SUMMARY.md  DATABRICKS_README.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  app.yaml  databricks.yml  pyproject.toml
examples/: README.md  example_usage.py
src/slack_mcp_server/: __init__.py  app.py  main.py  server.py
src/slack_mcp_server/static/: config.html  index.html
