[project]
name = "slack-mcp-server-databricks"
version = "0.1.0"
description = "Slack MCP Server for Databricks Apps"
readme = "README.md"
authors = [{ name = "Slack MCP Server Contributors" }]
requires-python = ">=3.10"
dependencies = [
    "slack-sdk>=3.31.0",
    "mcp[cli]>=1.10.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-dateutil>=2.9.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/murtihash94/slack-mcp-server-databricks"
Issues = "https://github.com/murtihash94/slack-mcp-server-databricks/issues"

[project.scripts]
slack-mcp-server = "slack_mcp_server.server:main"
slack-mcp-server-databricks = "slack_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.hooks.custom]
path = "hooks/apps_build.py"
